feat: target Java 8 bytecode so the plugin runs on JDK 8+ (#505)
* feat: target Java 8 bytecode so the plugin runs on JDK 8+

The Maven plugin and core now compile with --release 8, letting DepClean
run on Maven with any JVM from Java 8 upwards while still analyzing
modern bytecode (ASM 9 reads class files up to the latest Java release).

- Replace records, pattern-matching instanceof, and switch expressions
  with Java 8 equivalents; keep accessor names to avoid call-site churn
- Drop the JGraphT dependency: DefaultCallGraph now uses a plain
  adjacency map with an iterative DFS (JGraphT 1.5.x needs Java 11)
- Replace Set.of and other Java 9+ APIs in main sources
- Enforce Java 8 bytecode in runtime dependencies via
  extra-enforcer-rules' enforceBytecodeVersion
- Tests keep compiling and running on the modern build JDK (testRelease 17)
- Document the new runtime requirement in README and CONTRIBUTING

* ci: extend the build matrix to JDK 21 and 25

Proves the build-on-modern-JDK, target-Java-8 setup on both current LTS
levels across all three operating systems.

* ci: build with JDK 25 only, targeting Java 8 bytecode

The full pipeline (build matrix, Gradle job, deploy) now runs on the
current JDK while the compiler emits Java 8 bytecode via --release 8,
exercising the widest build-JDK/target gap.

* docs: state that bytecode analysis covers any Java version

ASM 9.x reads class files up to the latest Java release, so the old
'Java 21' claim undersold the analyzer and read oddly next to the new
Java 8 runtime bullet.

* fix: port the MavenInvoker process cleanup to Java 8 APIs

The MavenInvoker rework merged in #480 uses ProcessHandle, List.of and
@Deprecated(since), which do not exist on Java 8. The cleanup now uses
Process.destroy/destroyForcibly with a timed waitFor, keeping the
hang-hardening semantics. Descendant processes cannot be enumerated on
Java 8, so only the process itself is terminated; children are expected
to end with their parent.

* fix: port the